# cpa-monitor

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
config/: default.toml
crates/cpa-aggregator/: Cargo.toml
crates/cpa-aggregator/src/: main.rs
crates/cpa-config/: Cargo.toml
crates/cpa-config/src/: lib.rs
crates/cpa-ingestor/: Cargo.toml
crates/cpa-ingestor/src/: main.rs
crates/cpa-store/: Cargo.toml
crates/cpa-store/src/: dashboard.rs  lib.rs  usage_event.rs
openspec/changes/archive/2026-06-14-add-token-usage-tui/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-14-add-token-usage-tui/specs/token-usage-dashboard/: spec.md
openspec/changes/archive/2026-06-14-improve-dashboard-units/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-14-improve-dashboard-units/specs/token-usage-dashboard/: spec.md
openspec/specs/token-usage-dashboard/: spec.md
