[workspace]
members = [
    "crates/cpa-aggregator",
    "crates/cpa-config",
    "crates/cpa-ingestor",
    "crates/cpa-store",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

[workspace.dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
cpa-config = { path = "crates/cpa-config" }
cpa-store = { path = "crates/cpa-store" }
config = { version = "0.15.23", default-features = false, features = ["toml"] }
crossterm = "0.29.0"
dirs = "6.0.0"
futures-util = "0.3.32"
ratatui = "0.30.1"
redis = { version = "1.2.2", features = ["tokio-comp"] }
sea-orm = { version = "2.0.0-rc.40", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
