[package]
name = "cpa-aggregator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
cpa-config.workspace = true
cpa-store.workspace = true
crossterm.workspace = true
ratatui.workspace = true
sea-orm.workspace = true
tokio.workspace = true
